# mememanager

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  mememanager-project.md  pyproject.toml
src/: __init__.py  main.py
src/database/: __init__.py  manager.py
src/ui/: main_window.py
src/utils/: image_handler.py
tests/: test_database.py
